--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,6 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-/test-results/
-/playwright-report/
-/playwright/.cache/
+
+# turbo
+.turbo
