--- a/.releaserc
+++ b/.releaserc
@@ -1,12 +1,3 @@
 {
-  branches: ["main"],
-  "plugins":
-    [
-      ["@semantic-release/npm", { "npmPublish": false }],
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/github",
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/git",
-      "@semantic-release/changelog",
-    ],
+  branches: ["main"]
 }
